k8s/inventario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventario-dpl
  labels:
    app: inventario
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventario
  template:
    metadata:
      labels:
        app: inventario
    spec:
      containers:
      - name: inventario
        image: uhilari/inventario:0.0.3
        resources:
          limits:
            memory: "128M"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: inventario-svc
spec:
  selector:
    app: inventario
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: inventario-lb
# spec:
#   selector:
#     app: inventario
#   ports:
#   - protocol: TCP
#     port: 8480
#     targetPort: 80
#   type: LoadBalancer
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: inventario-ing
#   labels:
#     name: inventario
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: inventario.dev
#     http:
#       paths:
#       - pathType: Prefix
#         path: /api(/|$)(.*)
#         backend:
#           service:
#             name: inventario-svc
#             port: 
#               number: 80
